--- a/package.json
+++ b/package.json
@@ -85,14 +85,13 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@cloudflare/next-on-pages": "latest",
+    "autoprefixer": "^10.4.19",
     "eslint": "^9.39.1",
     "playwright": "1.44.0",
     "png-to-ico": "^3.0.1",
     "postcss": "^8.5",
     "sharp": "^0.34.4",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5",
-    "wrangler": "^4.61.1"
+    "typescript": "^5"
   }
 }
